Added Hero Page, and Improved Login Page with Unified Color theme

--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
+    "axios": "^1.8.2",
     "classnames": "^2.5.1",
-    "framer-motion": "^12.4.7",
+    "framer-motion": "^12.5.0",
+    "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^6.30.0",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
@@ -27,6 +30,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "tailwind-corner-smoothing": "^1.2.0",
     "vite": "^6.1.0"
   }
 }
